fix(ui): JobsHeader - move spacing to parent

--- a/packages/ui/src/components/job-header/job-header.module.css
+++ b/packages/ui/src/components/job-header/job-header.module.css
@@ -1,6 +1,5 @@
 .root {
   position: relative;
-  padding: var(--space-small);
   display: flex;
   align-items: flex-start;
 }
